# xgo-crossmobile

go/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cross_compilation_test  cross_compilation_test.cbp  logger.c  main-ios-7.0-arm64.dylib  main.go
go/main-ios-7.0-framework/Main.framework/Versions/A/Headers/: Main.h
go/test/: c_test.c
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/debug/: AndroidManifest.xml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/avatarin/mobile/: MainActivity.kt
mobile/ios/Frameworks/Main.framework/Modules/: module.modulemap
mobile/ios/Main.framework/: Main
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: constants.dart  main.dart  xgo.dart
